@@ -1,4 +1,6 @@
 Changes in version 1-3-0.1 (xx/xx/2015)
+    * we now require R 2.3.0 so cbind in Matrix works.
+    * is.maximal is now also avaialble for rules.
 
 Changes in version 1-3-0 (11/11/2015)
     * removed deprecated WRITE and SORT functions.
